[project]
name = "esc204-zombie-fire-mqtt-subscriber"
version = "0.1.0"
description = "MQTT subscriber, InfluxDB writer, Grafana configurations for ESC204 IoT zombie fire monitoring."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Derek Chen", email = "derekj.chen@mail.utoronto.ca" },
]
dependencies = [
  "influxdb-client",
  "paho-mqtt",
  "python-dotenv",
]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools]
py-modules = ["main", "config", "mqtt_subscriber", "influxdb_utils"]
